--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
            </div>
         </div>   
             <div id="fundo_menu">
-                <img id="icone" src="img/cm.png" alt="icon">
+                <ion-icon name="contact" id="icone"></ion-icon>
                 <a href="#">Lucas Ataide Martins</a>
                     <div class="redes_sociais">
-                        <div class="circle"></div>
-                        <div class="circle"></div>
-                        <div class="circle"></div>
+                        <ion-icon name="logo-instagram" class="icon"></ion-icon>
+                        <ion-icon name="logo-github" class="icon"></ion-icon>
+                        <ion-icon name="logo-linkedin" class="icon"></ion-icon>
+
                     </div>
             </div>
     </header>
@@ -70,7 +71,33 @@
                 </div>
             </div>
         </div>
+            <h1>Habidades Profissionais</h1>
+            <div class="habilidades">
+                    <table id="tabela1">
+                        <tr>
+                            <td>HTML</td>
+                            <td>CSS</td>
+                        </tr>
+                            <p></p>
+                        <tr>
+                            <td>JAVASCRIPT</td>
+                            <td>SASS</td>
+                        </tr>
+                            <P></P>
+                        <tr>
+                            <td>BOOTSTRAP</td>
+                            <td>PHOTOSHOP</td>
+                        </tr>
+                            <p></p>
+                    </table>
+            </div>
     </main>
     <footer></footer>
+
+
+
+
+    <script  src = "https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+
 </body>
 </html>
