modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- //////////////////////////////////////////////////////////////// -->
     <header>
         <div class="menu">
             <div class="lado_esquerdo">
@@ -27,7 +28,7 @@
                     <li><a href="#">CONTATO</a></li>
                 </ul>
            </div>
-        </div>   
+        </div>
             <div id="fundo_menu">
                 <ion-icon name="contact" id="icone"></ion-icon>
                 <a href="#">Lucas Ataide Martins</a>
@@ -35,19 +36,19 @@
                         <ion-icon name="logo-instagram" class="icon"></ion-icon>
                         <ion-icon name="logo-github" class="icon"></ion-icon>
                         <ion-icon name="logo-linkedin" class="icon"></ion-icon>
-
                     </div>
             </div>
     </header>
+    <!-- //////////////////////////////////////////////////////////////// -->
     <main>
        <div class="apresentacao">
-            <div class="descricao">
+            <div class="container_informacoes">
                 <div class="informacoes">
                     <h1 class="titulo_informacoes">Sobre</h1>
                     <p>
                         Hello! I am Bruno A. Dias. Web Developer, Graphic Designer and Photographer and Teacher.
 
-                        Curriculum Vitae is a HTML resume template for professionals. Built with Bootstrap 4, Now UI Kit and FontAwesome, this modern and responsive design template is perfect to showcase your portfolio, skills and experience.  
+                        Curriculum Vitae is a HTML resume template for professionals. Built with Bootstrap 4, Now UI Kit and FontAwesome, this modern and responsive design template is perfect to showcase your portfolio, skills and experience.
                     </p>
                 </div>
                 <div class="informacoes">
@@ -71,27 +72,43 @@
                 </div>
             </div>
         </div>
-            <h1>Habidades Profissionais</h1>
-            <div class="habilidades">
-                    <table id="tabela1">
-                        <tr>
-                            <td>HTML</td>
-                            <td>CSS</td>
-                        </tr>
-                            <p></p>
-                        <tr>
-                            <td>JAVASCRIPT</td>
-                            <td>SASS</td>
-                        </tr>
-                            <P></P>
-                        <tr>
-                            <td>BOOTSTRAP</td>
-                            <td>PHOTOSHOP</td>
-                        </tr>
-                            <p></p>
-                    </table>
-            </div>
+            <h1 class="titulo_informacoes">Habilidades Profissionais</h1>
+                <div class="container_habilidades">
+                    <div class="habilidades">
+                            <div class="lado_direito" style="width: 100%; padding: 10px;">
+                                <div class="dados">
+                                    <p class="skill">HTML</p>
+                                    <p>80%</p>
+                                </div>
+                                <div class="dados">
+                                    <p class="skill">CSS</p>
+                                    <p>75%</p>
+                                </div>
+                                <div class="dados">
+                                    <p class="skill">Javascript</p>
+                                     <p>60%</p>
+                                </div>
+                            </div>
+                            <div class="lado_esquerdo" style="width: 100%; padding: 10px;">
+                                <div class="dados">
+                                    <p class="skill">Kass</p>
+                                    <p>0%</p>
+                                </div>
+                                <div class="dados">
+                                    <p class="skill">Photoshop</p>
+                                    <p>30%</p>
+                                </div>
+                                <div class="dados">
+                                    <p class="skill">Bootstrap</p>
+                                    <p>0%</p>
+                                </div>
+                                     
+                                     
+                            </div>
+                    </div>
+                </div>
     </main>
+    <!-- //////////////////////////////////////////////////////////////// -->
     <footer></footer>
 
 
