modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <!-- //////////////////////////////////////////////////////////////// -->
     <header>
+        <!-- ---------------MENU--------------- -->
         <div class="menu">
             <div class="lado_esquerdo">
                 <ul>
@@ -41,6 +42,7 @@
     </header>
     <!-- //////////////////////////////////////////////////////////////// -->
     <main>
+        <!-- ---------------SOBRE--------------- -->
        <div class="apresentacao">
             <div class="container_informacoes">
                 <div class="informacoes">
@@ -72,7 +74,8 @@
                 </div>
             </div>
         </div>
-            <h1 class="titulo_informacoes">Habilidades Profissionais</h1>
+        <!-- ---------------HABILIDADES--------------- -->
+            <h1 class="titulo_informacoes" style="margin-top: 100px;">Habilidades Profissionais</h1>
                 <div class="container_habilidades">
                     <div class="habilidades">
                             <div class="lado_direito" style="width: 100%; padding: 10px;">
@@ -102,11 +105,23 @@
                                     <p class="skill">Bootstrap</p>
                                     <p>0%</p>
                                 </div>
-                                     
-                                     
                             </div>
                     </div>
                 </div>
+<!-- ---------------PORTIFÓLIO--------------- -->
+            <h1 class="titulo_informacoes" style="margin-top: 100px;">Portifólio</h1>
+                <div class="portifolio">
+                    <div class="icones">
+                        <ion-icon name="laptop" class="icon"></ion-icon>
+                        <ion-icon name="images" class="icon"></ion-icon>
+                        <ion-icon name="camera" class="icon"></ion-icon>
+                        <ion-icon name="image" class="icon"></ion-icon>
+                    </div>
+
+                </div>
+
+
+        </div>
     </main>
     <!-- //////////////////////////////////////////////////////////////// -->
     <footer></footer>
