--- a/index.html
+++ b/index.html
@@ -112,10 +112,9 @@
             <h1 class="titulo_informacoes" style="margin-top: 100px;">Portifólio</h1>
                 <div class="portifolio">
                     <div class="icones">
-                        <ion-icon name="laptop" class="icon"></ion-icon>
-                        <ion-icon name="images" class="icon"></ion-icon>
-                        <ion-icon name="camera" class="icon"></ion-icon>
-                        <ion-icon name="image" class="icon"></ion-icon>
+                        <ion-icon name="laptop" class="icon2"></ion-icon>
+                        <ion-icon name="images" class="icon2"></ion-icon>
+                        <ion-icon name="camera" class="icon2"></ion-icon>
                     </div>
 
                 </div>
