--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -197,7 +197,7 @@
 
     <!-- //////////////////////////////////////////////////////////////// -->
     <footer>
-        <div class="container_rodape">
+        <div class="container_rodape" id="contato">
             <div class="rodape1">
                  <div id="logo-rodape"> </div>
             </div>
